logs/mypasswords-api.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/aiolog'...
Listing './lib/python3.5/site-packages/aiolog-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/asyncpg'...
Listing './lib/python3.5/site-packages/asyncpg/_testbase'...
Listing './lib/python3.5/site-packages/asyncpg/exceptions'...
Listing './lib/python3.5/site-packages/asyncpg/protocol'...
Listing './lib/python3.5/site-packages/asyncpg/protocol/codecs'...
Listing './lib/python3.5/site-packages/asyncpg/protocol/record'...
Listing './lib/python3.5/site-packages/asyncpg-0.14.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/mypasswords_api'...
Listing './lib/python3.5/site-packages/mypasswords_api/core'...
Compiling './lib/python3.5/site-packages/mypasswords_api/core/password.py'...
***   File "./lib/python3.5/site-packages/mypasswords_api/core/password.py", line 24
    raise ValueError(f'uuid: {value} is not a valid uuid')
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mypasswords_api/healthchecks'...
Listing './lib/python3.5/site-packages/mypasswords_api/middlewares'...
Listing './lib/python3.5/site-packages/mypasswords_api/resources'...
Listing './lib/python3.5/site-packages/mypasswords_api/resources/passwords'...
Listing './lib/python3.5/site-packages/mypasswords_api/settings'...
Listing './lib/python3.5/site-packages/mypasswords_api-0.1.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pydantic'...
Compiling './lib/python3.5/site-packages/pydantic/exceptions.py'...
***   File "./lib/python3.5/site-packages/pydantic/exceptions.py", line 52
    v = ' '.join(f'{k}={e.get(k)}' for k in E_KEYS if e.get(k))
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydantic/fields.py'...
***   File "./lib/python3.5/site-packages/pydantic/fields.py", line 38
    self.name: str = name
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydantic/main.py'...
***   File "./lib/python3.5/site-packages/pydantic/main.py", line 94
    raise ValueError(f'"{self.__class__.__name__}" object has no field "{name}"')
                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydantic/types.py'...
***   File "./lib/python3.5/site-packages/pydantic/types.py", line 31
    min_length: int = None
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydantic/utils.py'...
***   File "./lib/python3.5/site-packages/pydantic/utils.py", line 86
    raise ImportError(f'"{dotted_path}" doesn\'t look like a module path') from e
                                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydantic/validators.py'...
***   File "./lib/python3.5/site-packages/pydantic/validators.py", line 54
    raise ValueError(f'size not in range {model.config.min_number_size} to {model.config.max_number_size}')
                                                                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pydantic-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simple_settings'...
Listing './lib/python3.5/site-packages/simple_settings/dynamic_settings'...
Listing './lib/python3.5/site-packages/simple_settings/strategies'...
Listing './lib/python3.5/site-packages/simple_settings-0.12.1.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
